syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService{
	rpc GetDiscount(GetDiscountRequest) return (CouponRequest);
	rpc CreateDiscount(CouponRequest) return (CouponRequest);
	rpc UpdateDiscount(CouponRequest) return (CouponRequest);
	rpc DeleteDiscount(DeleteDiscountRequest) return (DeleteCouponResponse);
}

message GetDiscountRequest
{
	string product_id = 1;
}

message CouponRequest
{
	int32 id = 1;
	string product_id = 2;
	string product_name = 3;
	string description = 4;
	int32 amount = 5;
}

message DeleteDiscountRequest
{
	string product_id = 1;
}
message DeleteCouponResponse
{
	bool success = 1;
}
